--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 # Commands to start on workspace startup
 tasks:
-  - init: npm install -g live-server
+  - before: npm install -g live-server
     command: mkdir -p cmbuild && live-server --port=8080 cmbuild
   - init: mkdir -p cmbuild && cd cmbuild && . /home/gitpod/emsdk/emsdk_env.sh && emcmake cmake ..
     prebuild: emmake make -j4
