--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,8 @@
 tasks:
   - before: npm install -g live-server
     command: mkdir -p cmbuild && live-server --port=8080 cmbuild
-  - init: mkdir -p cmbuild && cd cmbuild && . /home/gitpod/emsdk/emsdk_env.sh && emcmake cmake ..
+  - before: . /home/gitpod/emsdk/emsdk_env.sh
+    init: mkdir -p cmbuild && cd cmbuild && emcmake cmake ..
     prebuild: emmake make -j4
 # Ports to expose on workspace startup
 ports:
